--- a/DeployInertia/pom.xml
+++ b/DeployInertia/pom.xml
@@ -47,6 +47,24 @@
 		      <artifactId>jakarta.persistence-api</artifactId>
 		      <version>3.1.0</version>
 		</dependency>
+
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-mail</artifactId>
+    	</dependency>
+
+		<!-- <dependency>
+			<groupId>com.sun.mail</groupId>
+			<artifactId>javax.mail</artifactId>
+			<version>1.6.2</version>
+		</dependency> -->
+
+		<dependency>
+			<groupId>jakarta.mail</groupId>
+			<artifactId>jakarta.mail-api</artifactId>
+			<version>1.6.7</version>
+		</dependency>
+
 	</dependencies>
 
 	<build>
